Bug 1081008 - nsBaseFilePicker should use the innerWindow for the creation of File objects, r=bz